más data para el resultado del play
