# app/src/main/kotlin/ar/edu/austral/inf/sd/model/PlayResponse.kt
@@ -1,10 +1,21 @@
 package ar.edu.austral.inf.sd.model
 
+import java.util.Objects
+import ar.edu.austral.inf.sd.model.Signature
 import com.fasterxml.jackson.annotation.JsonProperty
+import jakarta.validation.constraints.DecimalMax
+import jakarta.validation.constraints.DecimalMin
+import jakarta.validation.constraints.Email
+import jakarta.validation.constraints.Max
+import jakarta.validation.constraints.Min
+import jakarta.validation.constraints.NotNull
+import jakarta.validation.constraints.Pattern
+import jakarta.validation.constraints.Size
 import jakarta.validation.Valid
 
 /**
  * 
+ * @param contentResult el resultado del contenido
  * @param originalContentType el tipo de contenido que enviaste
  * @param originalLength la longitud original que enviaste
  * @param originalHash el hash del mensaje original que enviaste
@@ -14,6 +25,8 @@ import jakarta.validation.Valid
  * @param signatures 
  */
 data class PlayResponse(
+
+    @get:JsonProperty("contentResult", required = true) val contentResult: kotlin.String,
 
     @get:JsonProperty("originalContentType", required = true) val originalContentType: kotlin.String,
 
